# subtitle-word-frequency

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  WordFrequency.desktop  install_launcher.sh  pyproject.toml  run_word_frequency.sh  setup.cfg  word_frequency.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
