[metadata]
name = subtitle-word-frequency
version = 0.1.0
description = Compute word frequencies from SRT/ASS subtitle files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
py_modules = word_frequency
python_requires = >=3.9

[options.entry_points]
console_scripts =
    subtitle-word-frequency = word_frequency:main
